--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.tautastic.intellij.plugin
+pluginGroup = com.github.tautastic.hamj.plugin
 pluginName = hamcrest-to-assertj
 pluginRepositoryUrl = https://github.com/tautastic/intellij-hamcrest-to-assertj
 # SemVer format -> https://semver.org
