--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,46 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.tautastic.intellij.plugin</id>
+    <id>com.github.tautastic.hamj.plugin</id>
     <name>Hamcrest to AssertJ</name>
     <vendor>tautastic</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.java</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
+    <resource-bundle>messages.InspectionBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.tautastic.intellij.plugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-    </extensions>
+        <!--
+          Extend the IntelliJ Platform local inspection type and connect it to the implementation class in this plugin.
+          <localInspection> type element is applied within the scope of a file under edit.
+          It is preferred over <inspectionToolProvider>
+          @see com.intellij.codeInspection.InspectionProfileEntry
 
-    <applicationListeners>
-        <listener class="com.github.tautastic.intellij.plugin.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
-    </applicationListeners>
+          Attributes:
+            - language - inspection language ID
+            - shortName - not specified, will be computed by the underlying implementation classes
+            - bundle - name of the message bundle for the "key" attribute
+            - key - the key of the message to be shown in the Settings | Editor | Inspections panel
+            - groupPath - defines the outermost grouping for this inspection in
+                the Settings | Editor | Inspections panel. Not localized.
+            - groupBundle - the name of a message bundle file to translate groupKey
+                In this case, reuse an IntelliJ Platform bundle file from intellij.platform.resources.en
+            - groupKey - the key to use for translation subgroup name using groupBundle file.
+                In this case, reuse the IntelliJ Platform subcategory "Probable bugs"
+            - enabledByDefault - inspection state when the Inspections panel is created.
+            - level - the default level of error found by this inspection, e.g. INFO, ERROR, etc.
+                @see com.intellij.codeHighlighting.HighlightDisplayLevel
+            - implementationClass= the fully-qualified name of the inspection implementation class
+        -->
+        <localInspection language="JAVA"
+                         bundle="messages.InspectionBundle"
+                         key="inspection.hamcrest.assert.display.name"
+                         groupPath="Java"
+                         groupBundle="messages.InspectionsBundle"
+                         groupKey="group.names.potentially.confusing.code.constructs"
+                         enabledByDefault="true"
+                         level="WARNING"
+                         implementationClass="com.github.tautastic.hamj.plugin.HamcrestAssertInspection"/>
+    </extensions>
 </idea-plugin>
