--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ pluginRepositoryUrl = https://github.com/tautastic/intellij-hamcrest-to-assertj
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 223
+pluginSinceBuild=233
 pluginUntilBuild = 241.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2022.3.3
+platformType=IU
+platformVersion=2023.3.6
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
