--- a/src/main/resources/messages/InspectionBundle.properties
+++ b/src/main/resources/messages/InspectionBundle.properties
@@ -1,3 +1,3 @@
 inspection.hamcrest.assert.display.name=Usage of Hamcrest assertions
-inspection.hamcrest.assert.that.problem.descriptor=Hamcrest to AssertJ: Hamcrest 'asserThat' used.
-inspection.hamcrest.assert.that.use.quickfix=Refactor to AssertJ.
+inspection.hamcrest.assert.that.problem.descriptor=Hamcrest to AssertJ: Hamcrest 'assertThat' used
+inspection.hamcrest.assert.that.use.quickfix=Refactor to AssertJ
